<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_socialapps"
            android:icon="@drawable/ic_social"
            android:title="@string/socialappstitle" />
        <item
            android:id="@+id/nav_otherapps"
            android:icon="@drawable/ic_otherapps"
            android:title="@string/otherappstitle" />

        <!--<item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->

    </group>

    <item android:title="@string/analysismenuitem">
        <menu>
            <item
                android:id="@+id/nav_stats"
                android:icon="@drawable/ic_stats"
                android:title="@string/statstitle" />
            <item
                android:id="@+id/nav_graph"
                android:icon="@drawable/ic_graph"
                android:title="@string/graphtitle" />
        </menu>
    </item>

</menu>
